--- a/index.html
+++ b/index.html
@@ -2,9 +2,10 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link rel="icon" type="image/svg+xml" href="./public/images/mktpl vault.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>mktpl vault</title>
+    <link href="./src/tailwind.css" rel="stylesheet">
   </head>
   <body>
     <div id="root"></div>
